--- a/game_data/1989-After-the-War.yaml
+++ b/game_data/1989-After-the-War.yaml
@@ -8,10 +8,10 @@ Base Game Achievements:
   Description: Achieve a combo of at least 5 hits.
   GS: '90'
   Guide: false
-  Number of Gamers: 79
-  Percentage of Gamers: 93%
-  Ratio: 1.03
-  TA: '92'
+  Number of Gamers: 122
+  Percentage of Gamers: 96%
+  Ratio: 1.01
+  TA: '91'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -19,10 +19,10 @@ Base Game Achievements:
   Description: Reach a score of at least 10000.
   GS: '90'
   Guide: false
-  Number of Gamers: 56
-  Percentage of Gamers: 66%
-  Ratio: 1.22
-  TA: '110'
+  Number of Gamers: 90
+  Percentage of Gamers: 71%
+  Ratio: 1.18
+  TA: '106'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -30,8 +30,8 @@ Base Game Achievements:
   Description: Talk to an NPC.
   GS: '90'
   Guide: false
-  Number of Gamers: 81
-  Percentage of Gamers: 95%
+  Number of Gamers: 122
+  Percentage of Gamers: 96%
   Ratio: 1.01
   TA: '91'
   Tags:
@@ -41,10 +41,10 @@ Base Game Achievements:
   Description: Defeat the level 1 boss.
   GS: '90'
   Guide: false
-  Number of Gamers: 46
-  Percentage of Gamers: 54%
-  Ratio: 1.35
-  TA: '121'
+  Number of Gamers: 74
+  Percentage of Gamers: 58%
+  Ratio: 1.3
+  TA: '117'
   Tags:
   - Offline Mode
   - Single Player
@@ -53,10 +53,10 @@ Base Game Achievements:
   Description: Defeat the level 2 boss.
   GS: '90'
   Guide: false
-  Number of Gamers: 43
-  Percentage of Gamers: 51%
-  Ratio: 1.39
-  TA: '125'
+  Number of Gamers: 70
+  Percentage of Gamers: 55%
+  Ratio: 1.34
+  TA: '121'
   Tags:
   - Offline Mode
   - Single Player
@@ -65,10 +65,10 @@ Base Game Achievements:
   Description: Defeat the level 3 boss.
   GS: '90'
   Guide: false
-  Number of Gamers: 40
-  Percentage of Gamers: 47%
-  Ratio: 1.44
-  TA: '130'
+  Number of Gamers: 64
+  Percentage of Gamers: 50%
+  Ratio: 1.4
+  TA: '126'
   Tags:
   - Offline Mode
   - Single Player
@@ -76,11 +76,11 @@ Base Game Achievements:
 - Achievement Name: Target 4 eliminated!
   Description: Defeat the level 4 boss.
   GS: '100'
-  Guide: false
-  Number of Gamers: 39
-  Percentage of Gamers: 46%
-  Ratio: 1.46
-  TA: '146'
+  Guide: true
+  Number of Gamers: 63
+  Percentage of Gamers: 50%
+  Ratio: 1.41
+  TA: '141'
   Tags:
   - Offline Mode
   - Single Player
@@ -89,10 +89,10 @@ Base Game Achievements:
   Description: Use a checkpoint.
   GS: '90'
   Guide: false
-  Number of Gamers: 60
-  Percentage of Gamers: 71%
-  Ratio: 1.18
-  TA: '106'
+  Number of Gamers: 98
+  Percentage of Gamers: 77%
+  Ratio: 1.13
+  TA: '102'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -100,10 +100,10 @@ Base Game Achievements:
   Description: Buy an item.
   GS: '90'
   Guide: false
-  Number of Gamers: 61
-  Percentage of Gamers: 72%
-  Ratio: 1.17
-  TA: '105'
+  Number of Gamers: 95
+  Percentage of Gamers: 75%
+  Ratio: 1.15
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
@@ -112,10 +112,10 @@ Base Game Achievements:
   Description: Destroy a barrel.
   GS: '90'
   Guide: false
-  Number of Gamers: 66
-  Percentage of Gamers: 78%
-  Ratio: 1.12
-  TA: '101'
+  Number of Gamers: 105
+  Percentage of Gamers: 83%
+  Ratio: 1.09
+  TA: '98'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -123,33 +123,33 @@ Base Game Achievements:
   Description: Save a prisoner.
   GS: '90'
   Guide: false
-  Number of Gamers: 44
-  Percentage of Gamers: 52%
-  Ratio: 1.38
-  TA: '124'
+  Number of Gamers: 73
+  Percentage of Gamers: 57%
+  Ratio: 1.31
+  TA: '118'
   Tags:
   - Offline Game Mode
   - Single Player
-Base Ratio: 1.251
-Base TA: 1251
+Base Ratio: 1.214
+Base TA: 1214
 Delisted: false
 Developer: SEEP
 Game Name: 1989 After the War
 Genres: Platformer
 Install Size: 414.0
-Number of Completions: 40
-Number of Gamers: 85
+Number of Completions: 65
+Number of Gamers: 127
 Overall Completion Time:
 - 0.5
 - 1.0
 Overall GS: 1000
-Overall Ratio: 1.251
-Overall TA: 1251
+Overall Ratio: 1.214
+Overall TA: 1214
 PDU: 0
-Percentage Completed: 47.06
+Percentage Completed: 51.18
 Publisher: Ratalaika Games
 Release Date: 15 August 2025
 Server Closure: false
-Site Rating: 2.0
+Site Rating: 2.44
 Update Achievements: []
 Walkthrough: false
